# quote

./: .projectile  README.md
quote-service/: .env  Cargo.toml  rust-toolchain
quote-service/logs/test/: index.json
quote-service/migrations/2020-03-30-092549_add_quotes/: up.sql
quote-service/migrations/2020-04-04-045617_add_sessions/: up.sql
quote-service/src/: data.rs  lib.rs  main.rs  model.rs  schema.rs  serial.rs  version.rs
quote-service/src/api/: error.rs  mod.rs  quote.rs  session.rs  test.rs  user.rs
quote-service/src/http/: db.rs  error.rs  mod.rs  session.rs
quote-service/src/snapshots/: quote__serial__test__permission-2.snap  quote__serial__test__permission-3.snap  quote__serial__test__permission.snap  quote__serial__test__quote_file.snap  quote__serial__test__quote_file_create_request.snap  quote__serial__test__quote_file_create_response.snap  quote__serial__test__quote_file_list_response.snap  quote__serial__test__session_create_request.snap  quote__serial__test__session_create_response.snap  quote__serial__test__snapshots.snap  quote__serial__test__user_create_request.snap  quote__serial__test__user_create_response.snap
quote-ui/: .eslintignore  .eslintrc.json  package.json
quote-ui/.storybook/: decorators.js  preview.js
quote-ui/public/: hero-alternative.jpg.README  hero.jpg.README
quote-ui/src/: App.js  AuthenticatedApp.js  UnauthenticatedApp.js  index.js
quote-ui/src/actions/: api.js  createFile.js  fetchFiles.js  login.js  logout.js  register.js
quote-ui/src/middleware/: route.js
quote-ui/src/reducers/: file.js  index.js  (+1 more)
(+49 files in other folders)
