[package]
name = "quote"
version = "0.1.0"
authors = ["Mark Hibberd <mark@hibberd.id.au>"]
edition = "2018"

[dependencies]
base16 = "0.2.1"
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
rand = "0.7.3"
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["diesel_postgres_pool"] }
scrypt = "0.2.0"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"

[dev-dependencies]
insta = "0.15.0"
